[package]
name = "hello_world"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
zeeland.workspace = true
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"